[gd_scene load_steps=2 format=3 uid="uid://ds2oilyxtgj32"]

[ext_resource type="Script" path="res://enemy/enemy_base/enemy_base.gd" id="1_fh2tj"]

[node name="EnemyBase" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_fh2tj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HurtBox" type="Area2D" parent="." groups=["enemy"]]

[node name="HurtBoxCollision" type="CollisionShape2D" parent="HurtBox"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
